--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ slave:
     - /var/run/docker.sock:/var/run/docker.sock
 
 scheduler:
-  image: hubspot/singularity:0.4.2
+  image: hubspot/singularity
   net: host
   environment:
     LOAD_BALANCER_URI: http://localhost:8080/baragon/v2/request
