--- a/pom.xml
+++ b/pom.xml
@@ -673,6 +673,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.jolokia</groupId>
+          <artifactId>docker-maven-plugin</artifactId>
+          <version>0.12.0</version>
+        </plugin>
+        <plugin>
           <groupId>pl.project13.maven</groupId>
           <artifactId>git-commit-id-plugin</artifactId>
           <configuration>
