--- a/SingularityServiceIntegrationTests/pom.xml
+++ b/SingularityServiceIntegrationTests/pom.xml
@@ -48,203 +48,213 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>integration-test</id>
-            <goals>
-              <goal>integration-test</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>verify</id>
-            <goals>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <systemPropertyVariables>
-            <!-- Needs to be repeated here (the following two lines strangely doesn't work when the next line is omitted although)
-                 Maven, you little sneaky beast ... -->
-            <zk.port>${zk.port}</zk.port>
-            <mesos.master.port>${mesos.master.port}</mesos.master.port>
-            <singularity.port>${singularity.port}</singularity.port>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jolokia</groupId>
-        <artifactId>docker-maven-plugin</artifactId>
-        <configuration>
-          <images>
-            <image>
-              <name>bobrik/zookeeper</name>
-              <alias>singularity-test-zk</alias>
-              <run>
-                <ports>
-                  <port>zk.port:2181</port>
-                </ports>
-                <env>
-                  <ZK_CONFIG>tickTime=2000,initLimit=10,syncLimit=5,maxClientCnxns=128,forceSync=no,clientPort=2181</ZK_CONFIG>
-                  <ZK_ID>1</ZK_ID>
-                </env>
-              </run>
-            </image>
-            <image>
-              <name>mesosphere/mesos-master:${mesos.docker.tag}</name>
-              <alias>singularity-test-master</alias>
-              <run>
-                <links>
-                  <link>singularity-test-zk</link>
-                </links>
-                <ports>
-                  <port>mesos.master.port:5050</port>
-                </ports>
-                <env>
-                  <MESOS_ZK>zk://singularity-test-zk:2181/mesos</MESOS_ZK>
-                  <MESOS_QUORUM>1</MESOS_QUORUM>
-                  <MESOS_CLUSTER>singularity-integration-test</MESOS_CLUSTER>
-                  <MESOS_WORK_DIR>/var/lib/mesos</MESOS_WORK_DIR>
-                </env>
-                <wait>
-                  <log>Elected as the leading master</log>
-                  <time>10000</time>
-                </wait>
-              </run>
-            </image>
-            <image>
-              <name>mesosphere/mesos-slave:${mesos.docker.tag}</name>
-              <alias>singularity-test-slave1</alias>
-              <run>
-                <links>
-                  <link>singularity-test-zk</link>
-                  <link>singularity-test-master</link>
-                </links>
-                <ports>
-                  <port>mesos.slave1.port:5051</port>
-                </ports>
-                <env>
-                  <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
-                  <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
-                </env>
-                <volumes>
-                  <bind>
-                    <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                    <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
-                    <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
-                  </bind>
-                </volumes>
-                <wait>
-                  <log>Registered with master</log>
-                  <time>10000</time>
-                </wait>
-              </run>
-            </image>
-            <image>
-              <name>mesosphere/mesos-slave:${mesos.docker.tag}</name>
-              <alias>singularity-test-slave2</alias>
-              <run>
-                <links>
-                  <link>singularity-test-zk</link>
-                  <link>singularity-test-master</link>
-                </links>
-                <ports>
-                  <port>mesos.slave2.port:5051</port>
-                </ports>
-                <env>
-                  <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
-                  <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
-                </env>
-                <volumes>
-                  <bind>
-                    <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                    <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
-                    <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
-                  </bind>
-                </volumes>
-                <wait>
-                  <log>Registered with master</log>
-                  <time>10000</time>
-                </wait>
-              </run>
-            </image>
-            <image>
-              <name>mesosphere/mesos-slave:${mesos.docker.tag}</name>
-              <alias>singularity-test-slave3</alias>
-              <run>
-                <links>
-                  <link>singularity-test-zk</link>
-                  <link>singularity-test-master</link>
-                </links>
-                <ports>
-                  <port>mesos.slave3.port:5051</port>
-                </ports>
-                <env>
-                  <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
-                  <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
-                </env>
-                <volumes>
-                  <bind>
-                    <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                    <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
-                    <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
-                  </bind>
-                </volumes>
-                <wait>
-                  <log>Registered with master</log>
-                  <time>10000</time>
-                </wait>
-              </run>
-            </image>
-            <image>
-              <name>hubspot/singularityservice:${project.version}</name>
-              <alias>singularity-service</alias>
-              <run>
-                <links>
-                  <link>singularity-test-zk</link>
-                  <link>singularity-test-master</link>
-                </links>
-                <ports>
-                  <port>singularity.port:7099</port>
-                </ports>
-                <env>
-                  <SINGULARITY_MESOS_MASTER>zk://singularity-test-zk:2181/mesos</SINGULARITY_MESOS_MASTER>
-                  <SINGULARITY_ZK>singularity-test-zk:2181</SINGULARITY_ZK>
-                </env>
-                <wait>
-                  <log>SingularityStartup: Finished startup</log>
-                  <time>10000</time>
-                </wait>
-              </run>
-            </image>
-          </images>
-        </configuration>
-        <!-- Connect this plugin to the maven lifecycle around the integration-test phase. I.e. start the container
-             in pre-integration-test and stop it in post-integration-test. -->
-        <executions>
-          <execution>
-            <id>start</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>start</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>stop</id>
-            <phase>post-integration-test</phase>
-            <goals>
-              <goal>stop</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
+  <profiles>
+    <profile>
+      <id>run-docker-integration-tests</id>
+      <activation>
+        <property>
+          <name>env.DOCKER_HOST</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <goals>
+                  <goal>integration-test</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>verify</id>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <systemPropertyVariables>
+                <!-- Needs to be repeated here (the following two lines strangely doesn't work when the next line is omitted although)
+                     Maven, you little sneaky beast ... -->
+                <zk.port>${zk.port}</zk.port>
+                <mesos.master.port>${mesos.master.port}</mesos.master.port>
+                <singularity.port>${singularity.port}</singularity.port>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.jolokia</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <configuration>
+              <images>
+                <image>
+                  <name>bobrik/zookeeper</name>
+                  <alias>singularity-test-zk</alias>
+                  <run>
+                    <ports>
+                      <port>zk.port:2181</port>
+                    </ports>
+                    <env>
+                      <ZK_CONFIG>tickTime=2000,initLimit=10,syncLimit=5,maxClientCnxns=128,forceSync=no,clientPort=2181</ZK_CONFIG>
+                      <ZK_ID>1</ZK_ID>
+                    </env>
+                  </run>
+                </image>
+                <image>
+                  <name>mesosphere/mesos-master:${mesos.docker.tag}</name>
+                  <alias>singularity-test-master</alias>
+                  <run>
+                    <links>
+                      <link>singularity-test-zk</link>
+                    </links>
+                    <ports>
+                      <port>mesos.master.port:5050</port>
+                    </ports>
+                    <env>
+                      <MESOS_ZK>zk://singularity-test-zk:2181/mesos</MESOS_ZK>
+                      <MESOS_QUORUM>1</MESOS_QUORUM>
+                      <MESOS_CLUSTER>singularity-integration-test</MESOS_CLUSTER>
+                      <MESOS_WORK_DIR>/var/lib/mesos</MESOS_WORK_DIR>
+                    </env>
+                    <wait>
+                      <log>Elected as the leading master</log>
+                      <time>10000</time>
+                    </wait>
+                  </run>
+                </image>
+                <image>
+                  <name>mesosphere/mesos-slave:${mesos.docker.tag}</name>
+                  <alias>singularity-test-slave1</alias>
+                  <run>
+                    <links>
+                      <link>singularity-test-zk</link>
+                      <link>singularity-test-master</link>
+                    </links>
+                    <ports>
+                      <port>mesos.slave1.port:5051</port>
+                    </ports>
+                    <env>
+                      <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
+                      <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
+                    </env>
+                    <volumes>
+                      <bind>
+                        <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
+                        <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
+                        <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
+                      </bind>
+                    </volumes>
+                    <wait>
+                      <log>Registered with master</log>
+                      <time>10000</time>
+                    </wait>
+                  </run>
+                </image>
+                <image>
+                  <name>mesosphere/mesos-slave:${mesos.docker.tag}</name>
+                  <alias>singularity-test-slave2</alias>
+                  <run>
+                    <links>
+                      <link>singularity-test-zk</link>
+                      <link>singularity-test-master</link>
+                    </links>
+                    <ports>
+                      <port>mesos.slave2.port:5051</port>
+                    </ports>
+                    <env>
+                      <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
+                      <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
+                    </env>
+                    <volumes>
+                      <bind>
+                        <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
+                        <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
+                        <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
+                      </bind>
+                    </volumes>
+                    <wait>
+                      <log>Registered with master</log>
+                      <time>10000</time>
+                    </wait>
+                  </run>
+                </image>
+                <image>
+                  <name>mesosphere/mesos-slave:${mesos.docker.tag}</name>
+                  <alias>singularity-test-slave3</alias>
+                  <run>
+                    <links>
+                      <link>singularity-test-zk</link>
+                      <link>singularity-test-master</link>
+                    </links>
+                    <ports>
+                      <port>mesos.slave3.port:5051</port>
+                    </ports>
+                    <env>
+                      <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
+                      <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
+                    </env>
+                    <volumes>
+                      <bind>
+                        <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
+                        <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
+                        <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
+                      </bind>
+                    </volumes>
+                    <wait>
+                      <log>Registered with master</log>
+                      <time>10000</time>
+                    </wait>
+                  </run>
+                </image>
+                <image>
+                  <name>hubspot/singularityservice:${project.version}</name>
+                  <alias>singularity-service</alias>
+                  <run>
+                    <links>
+                      <link>singularity-test-zk</link>
+                      <link>singularity-test-master</link>
+                    </links>
+                    <ports>
+                      <port>singularity.port:7099</port>
+                    </ports>
+                    <env>
+                      <SINGULARITY_MESOS_MASTER>zk://singularity-test-zk:2181/mesos</SINGULARITY_MESOS_MASTER>
+                      <SINGULARITY_ZK>singularity-test-zk:2181</SINGULARITY_ZK>
+                    </env>
+                    <wait>
+                      <log>SingularityStartup: Finished startup</log>
+                      <time>10000</time>
+                    </wait>
+                  </run>
+                </image>
+              </images>
+            </configuration>
+            <!-- Connect this plugin to the maven lifecycle around the integration-test phase. I.e. start the container
+                 in pre-integration-test and stop it in post-integration-test. -->
+            <executions>
+              <execution>
+                <id>start</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>start</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>stop</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
 
-  </build>
+      </build>
+    </profile>
+  </profiles>
 </project>
 
 <!-- Local Variables: -->
