--- a/SingularityServiceIntegrationTests/pom.xml
+++ b/SingularityServiceIntegrationTests/pom.xml
@@ -229,6 +229,7 @@
                     <env>
                       <SINGULARITY_MESOS_MASTER>zk://singularity-test-zk:2181/mesos</SINGULARITY_MESOS_MASTER>
                       <SINGULARITY_ZK>singularity-test-zk:2181</SINGULARITY_ZK>
+                      <SINGULARITY_URI_BASE>/singularity</SINGULARITY_URI_BASE>
                     </env>
                     <wait>
                       <log>SingularityStartup: Finished startup</log>
