add default config for docker-maven-plugin in root pom

--- a/pom.xml
+++ b/pom.xml
@@ -676,6 +676,9 @@
           <groupId>org.jolokia</groupId>
           <artifactId>docker-maven-plugin</artifactId>
           <version>0.12.0</version>
+          <configuration>
+            <images></images>  <!-- default to no images to allow building from parent, let submodules override -->
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
