--- a/pom.xml
+++ b/pom.xml
@@ -679,6 +679,15 @@
           <configuration>
             <images></images>  <!-- default to no images to allow building from parent, let submodules override -->
           </configuration>
+          <executions>
+            <execution>
+              <id>build-docker-images</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                <goal>build</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
