--- a/SingularityServiceIntegrationTests/pom.xml
+++ b/SingularityServiceIntegrationTests/pom.xml
@@ -140,6 +140,7 @@
                       <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
                       <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
                       <MESOS_HOSTNAME>singularity-test-slave1</MESOS_HOSTNAME>
+                      <MESOS_ATTRIBUTES>rackid:a</MESOS_ATTRIBUTES>
                     </env>
                     <volumes>
                       <bind>
@@ -169,6 +170,7 @@
                       <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
                       <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
                       <MESOS_HOSTNAME>singularity-test-slave2</MESOS_HOSTNAME>
+                      <MESOS_ATTRIBUTES>rackid:b</MESOS_ATTRIBUTES>
                     </env>
                     <volumes>
                       <bind>
@@ -198,6 +200,7 @@
                       <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
                       <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
                       <MESOS_HOSTNAME>singularity-test-slave3</MESOS_HOSTNAME>
+                      <MESOS_ATTRIBUTES>rackid:c</MESOS_ATTRIBUTES>
                     </env>
                     <volumes>
                       <bind>
