--- a/SingularityServiceIntegrationTests/pom.xml
+++ b/SingularityServiceIntegrationTests/pom.xml
@@ -144,7 +144,8 @@
                     <volumes>
                       <bind>
                         <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                        <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
+                        <volume>/usr/bin/docker:/usr/bin/docker</volume>
+                        <volume>/usr/local/bin/docker:/usr/local/bin/docker</volume>
                         <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                       </bind>
                     </volumes>
@@ -173,7 +174,8 @@
                     <volumes>
                       <bind>
                         <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                        <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
+                        <volume>/usr/bin/docker:/usr/bin/docker</volume>
+                        <volume>/usr/local/bin/docker:/usr/local/bin/docker</volume>
                         <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                       </bind>
                     </volumes>
@@ -202,7 +204,8 @@
                     <volumes>
                       <bind>
                         <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                        <volume>/usr/local/bin/docker:/usr/bin/docker</volume>
+                        <volume>/usr/bin/docker:/usr/bin/docker</volume>
+                        <volume>/usr/local/bin/docker:/usr/local/bin/docker</volume>
                         <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                       </bind>
                     </volumes>
