--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -360,6 +360,7 @@
     <dependency>
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-test</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
