--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>basepom</artifactId>
-    <version>12.1</version>
+    <version>12.2</version>
   </parent>
 
   <artifactId>Singularity</artifactId>
@@ -131,11 +131,17 @@
         <version>${baragon.version}</version>
       </dependency>
 
-        <dependency>
-            <groupId>com.hubspot</groupId>
-            <artifactId>BaragonClient</artifactId>
-            <version>${baragon.version}</version>
-        </dependency>
+      <dependency>
+        <groupId>com.hubspot</groupId>
+        <artifactId>BaragonClient</artifactId>
+        <version>${baragon.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
 
       <dependency>
         <groupId>com.spotify</groupId>
