--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,9 @@
     <basepom.release.profiles>oss-release,build-swagger-documentation</basepom.release.profiles>
 
     <baragon.version>0.1.4</baragon.version>
-    <mesos.docker.tag>0.21.1-1.1.ubuntu1404</mesos.docker.tag> <!-- 0.21.0-1.0.ubuntu1404 is missing for mesos-slave -->
+    <mesos.docker.tag>0.22.1-1.0.ubuntu1404</mesos.docker.tag> <!-- 0.22.1-1.0.ubuntu1404 is missing for mesos-slave -->
     <horizon.version>0.0.10</horizon.version>
+    <mesos.version>0.22.1</mesos.version>
   </properties>
 
   <modules>
