--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
     <baragon.version>0.1.4</baragon.version>
     <mesos.docker.tag>0.22.1-1.0.ubuntu1404</mesos.docker.tag> <!-- 0.22.1-1.0.ubuntu1404 is missing for mesos-slave -->
     <horizon.version>0.0.10</horizon.version>
-    <mesos.version>0.22.1</mesos.version>
+    <mesos.version>0.22.1</mesos.version> <!-- override basepom while we are still testing -->
+    <dep.jesos.version>1.4</dep.jesos.version> <!-- override basepom while we are still testing -->
   </properties>
 
   <modules>
