beginnings of docker rework

--- a/SingularityExecutor/Dockerfile
+++ b/SingularityExecutor/Dockerfile
@@ -1,4 +1,5 @@
 FROM mesosphere/mesos:0.21.1-1.1.ubuntu1404
+## mesos + java used to build hubspot/singularityexecutorslavebase
 
 MAINTAINER platform-infrastructure-groups@hubspot.com
 
@@ -10,7 +11,7 @@ ENV JAVA_PACKAGE       server-jre
 
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y curl tar && \
+    apt-get install -y curl tar logrotate && \
     curl -kLOH "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" \
     http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz &&\
     gunzip ${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz &&\
@@ -18,15 +19,8 @@ RUN apt-get update && \
     rm ${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar &&\
     ln -s /opt/jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR} /opt/jdk
 
+RUN mkdir -p /usr/share/mesos/logwatcher && \
+    mkdir -p /usr/share/mesos/s3 && \
+    mkdir -p /usr/share/mesos/artifacts
+
 ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
-
-COPY SingularityService/target/SingularityService-0.4.3-SNAPSHOT-shaded.jar /etc/singularity/singularity.jar
-COPY SingularityExecutor/target/SingularityExecutor-0.4.3-SNAPSHOT-shaded.jar /etc/singularity/executor.jar
-
-COPY docker/singularity /etc/singularity
-COPY docker/executor/singularity-executor /usr/local/bin/singularity-executor
-RUN chmod 755 /usr/local/bin/singularity-executor
-
-CMD '/etc/singularity/start.sh'
-
-
