--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ master:
     MESOS_WORK_DIR: /var/lib/mesos
 
 slave:
-  image: hubspot/singularity
+  image: hubspot/singularityexecutorslave:0.4.3-SNAPSHOT
   command: mesos-slave
   net: host
   environment:
@@ -31,7 +31,7 @@ slave:
     - /var/run/docker.sock:/var/run/docker.sock
 
 scheduler:
-  image: hubspot/singularity
+  image: hubspot/singularityservice:0.4.3-SNAPSHOT
   net: host
   environment:
     - DOCKER_HOST
