--- a/SingularityServiceIntegrationTests/pom.xml
+++ b/SingularityServiceIntegrationTests/pom.xml
@@ -56,6 +56,12 @@
           <name>env.DOCKER_HOST</name>
         </property>
       </activation>
+      <properties>
+        <mesos.slave1.hostname>singularity-test-slave1</mesos.slave1.hostname>
+        <mesos.slave2.hostname>singularity-test-slave2</mesos.slave2.hostname>
+        <mesos.slave3.hostname>singularity-test-slave3</mesos.slave3.hostname>
+        <mesos.master.hostname>singularity-test-master</mesos.master.hostname>
+      </properties>
       <build>
         <plugins>
           <plugin>
@@ -80,6 +86,9 @@
                      Maven, you little sneaky beast ... -->
                 <zk.port>${zk.port}</zk.port>
                 <mesos.master.port>${mesos.master.port}</mesos.master.port>
+                <mesos.slave1.port>${mesos.slave.1.port}</mesos.slave1.port>
+                <mesos.slave2.port>${mesos.slave.2.port}</mesos.slave2.port>
+                <mesos.slave3.port>${mesos.slave.3.port}</mesos.slave3.port>
                 <singularity.port>${singularity.port}</singularity.port>
               </systemPropertyVariables>
             </configuration>
@@ -119,7 +128,7 @@
                       <MESOS_QUORUM>1</MESOS_QUORUM>
                       <MESOS_CLUSTER>singularity-integration-test</MESOS_CLUSTER>
                       <MESOS_WORK_DIR>/var/lib/mesos</MESOS_WORK_DIR>
-                      <MESOS_HOSTNAME>singularity-test-master</MESOS_HOSTNAME>
+                      <MESOS_HOSTNAME>${mesos.master.hostname}</MESOS_HOSTNAME>
                     </env>
                     <wait>
                       <log>Elected as the leading master</log>
@@ -143,7 +152,8 @@
                     <env>
                       <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
                       <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
-                      <MESOS_HOSTNAME>singularity-test-slave1</MESOS_HOSTNAME>
+                      <MESOS_HOSTNAME>${mesos.slave1.hostname}</MESOS_HOSTNAME>
+                      <MESOS_PORT>5051</MESOS_PORT>
                     </env>
                     <volumes>
                       <bind>
@@ -170,12 +180,13 @@
                       <link>singularity-test-master</link>
                     </links>
                     <ports>
-                      <port>mesos.slave2.port:5051</port>
+                      <port>mesos.slave2.port:5052</port>
                     </ports>
                     <env>
                       <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
                       <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
-                      <MESOS_HOSTNAME>singularity-test-slave2</MESOS_HOSTNAME>
+                      <MESOS_HOSTNAME>${mesos.slave2.hostname}</MESOS_HOSTNAME>
+                      <MESOS_PORT>5052</MESOS_PORT>
                     </env>
                     <volumes>
                       <bind>
@@ -202,12 +213,13 @@
                       <link>singularity-test-master</link>
                     </links>
                     <ports>
-                      <port>mesos.slave3.port:5051</port>
+                      <port>mesos.slave3.port:5053</port>
                     </ports>
                     <env>
                       <MESOS_MASTER>zk://singularity-test-zk:2181/mesos</MESOS_MASTER>
                       <MESOS_CONTAINERIZERS>docker,mesos</MESOS_CONTAINERIZERS>
-                      <MESOS_HOSTNAME>singularity-test-slave3</MESOS_HOSTNAME>
+                      <MESOS_HOSTNAME>${mesos.slave3.hostname}</MESOS_HOSTNAME>
+                      <MESOS_PORT>5053</MESOS_PORT>
                     </env>
                     <volumes>
                       <bind>
