run service on image with mesos installed

--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -136,7 +136,7 @@
                 <image>
                   <name>hubspot/singularityexecutorslave:${project.version}</name>
                   <build>
-                    <from>hubspot/singularityexecutorslavebase:${mesos.docker.tag}</from>
+                    <from>hubspot/singularitybase:${mesos.docker.tag}</from>
                     <maintainer>platform-infrastructure-groups@hubspot.com</maintainer>
                     <cmd>
                       <exec>
