--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ master:
   image: mesosphere/mesos-master:0.22.1-1.0.ubuntu1404
   net: host
   environment:
-    MESOS_ZK: zk://localhost:2181/mesos
+    MESOS_ZK: zk://127.0.0.1:2181/mesos
     MESOS_HOSTNAME: localhost
     MESOS_QUORUM: 1
     MESOS_CLUSTER: docker-compose
@@ -19,12 +19,13 @@ slave:
   image: hubspot/singularityexecutorslave:0.4.3-SNAPSHOT
   command: mesos-slave
   net: host
+  privileged: true
   environment:
-    MESOS_MASTER: zk://localhost:2181/mesos
+    MESOS_MASTER: zk://127.0.0.1:2181/mesos
     MESOS_HOSTNAME: localhost
     MESOS_CONTAINERIZERS: docker,mesos
   volumes:
-    - /sys/fs/cgroup:/sys/fs/cgroup
+    - /sys:/sys
     - /usr/local/bin/docker:/usr/bin/docker
     - /var/run/docker.sock:/var/run/docker.sock
 
@@ -34,6 +35,8 @@ scheduler:
   environment:
     - DOCKER_HOST
     - LOAD_BALANCER_URI=http://localhost:8080/baragon/v2/request
+    - SINGULARITY_MESOS_MASTER=zk://127.0.0.1:2181/mesos
+    - SINGULARITY_ZK=127.0.0.1:2181
 
 baragonservice:
   image: hubspot/baragonservice:0.1.8
