--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -52,6 +52,12 @@
       "dependencies": {
         "backbone": "~1.1.2"
       }
+    },
+    "sortable": {
+      "main": [
+          "js/sortable.min.js",
+          "css/sortable-theme-bootstrap.css"
+      ]
     }
   }
 }
