--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -34,8 +34,7 @@
     "backbone.localStorage": "~1.1.9",
     "underscore": "~1.8.0",
     "datatables": "~1.10.7",
-    "datatables-bootstrap3-plugin": "~0.4.0",
-    "font-awesome": "~4.3.0"
+    "datatables-bootstrap3-plugin": "~0.4.0"
   },
   "resolutions": {
     "backbone": "~1.1.2",
