--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,19 @@
         <artifactId>jackson-jaxrs-propertyfiltering</artifactId>
         <version>0.7.0</version>
       </dependency>
+    
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.4.187</version>
+      </dependency>
 
+      <dependency>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-core</artifactId>
+        <version>2.0.5</version>
+      </dependency>
+      
       <dependency>
         <groupId>com.hubspot</groupId>
         <artifactId>BaragonCore</artifactId>
