--- a/pom.xml
+++ b/pom.xml
@@ -134,9 +134,15 @@
       <dependency>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-core</artifactId>
-        <version>2.0.5</version>
+        <version>3.1.1</version>
       </dependency>
-      
+    
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>1.13</version>
+      </dependency>
+        
       <dependency>
         <groupId>com.hubspot</groupId>
         <artifactId>BaragonCore</artifactId>
