--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <baragon.version>0.1.4</baragon.version>
     <mesos.docker.tag>0.21.1-1.1.ubuntu1404</mesos.docker.tag> <!-- 0.21.0-1.0.ubuntu1404 is missing for mesos-slave -->
     <horizon.version>0.0.10</horizon.version>
+    <curator.version>2.8.0</curator.version>
   </properties>
 
   <modules>
