--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,9 @@ slave:
     MESOS_MASTER: zk://localhost:2181/mesos
     MESOS_HOSTNAME: localhost
     MESOS_IP: 127.0.0.1
-    MESOS_CONTAINERIZERS: docker,mesos
+    MESOS_CONTAINERIZERS: mesos
   volumes:
-    - /sys/fs/cgroup:/sys/fs/cgroup
-    - /usr/local/bin/docker:/usr/bin/docker
-    - /var/run/docker.sock:/var/run/docker.sock
+    - /sys:/sys
 
 scheduler:
   image: hubspot/singularityservice:0.4.3-SNAPSHOT
