update volumes for integration test slaves

--- a/SingularityServiceIntegrationTests/pom.xml
+++ b/SingularityServiceIntegrationTests/pom.xml
@@ -188,9 +188,7 @@
                     </env>
                     <volumes>
                       <bind>
-                        <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                        <volume>/usr/bin/docker:/usr/bin/docker</volume>
-                        <volume>/usr/local/bin/docker:/usr/local/bin/docker</volume>
+                        <volume>/sys:/sys</volume>
                         <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                       </bind>
                     </volumes>
@@ -221,9 +219,7 @@
                     </env>
                     <volumes>
                       <bind>
-                        <volume>/sys/fs/cgroup:/sys/fs/cgroup</volume>
-                        <volume>/usr/bin/docker:/usr/bin/docker</volume>
-                        <volume>/usr/local/bin/docker:/usr/local/bin/docker</volume>
+                        <volume>/sys:/sys</volume>
                         <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                       </bind>
                     </volumes>
