--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -17,7 +17,7 @@ master:
     MESOS_WORK_DIR: /var/lib/mesos
 
 slave:
-  image: hubspot/singularityexecutorslave:0.4.3
+  image: hubspot/singularityexecutorslave:0.4.4-SNAPSHOT
   command: mesos-slave
   net: host
   environment:
@@ -30,7 +30,7 @@ slave:
     - /sys:/sys
 
 scheduler:
-  image: hubspot/singularityservice:0.4.3
+  image: hubspot/singularityservice:0.4.4-SNAPSHOT
   net: host
   environment:
     - DOCKER_HOST
