--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -497,6 +497,12 @@
             </lifecycleMappingMetadata>
           </configuration>
         </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
